# parkingbot

install/: local_setup.sh  setup.sh
install/cctv_perception/lib/cctv_perception/: calibrate  cctv_fusion_node
install/cctv_perception/share/cctv_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_python_pkg/lib/my_python_pkg/: sim_aruco_sync  sync_controller
install/my_python_pkg/share/my_python_pkg/: package.dsv  package.ps1  package.sh  package.xml
install/parking_sim/lib/parking_sim/: cctv  controller  robot  sim_aruco_sync  visualizer
install/parking_sim/share/parking_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/parking_sim/share/parking_sim/launch/: sim_launch.py
install/parking_system/lib/parking_system/: cctv  orchestrator  robot
install/parking_system/share/parking_system/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/parking_system/share/parking_system/launch/: system_launch.py
log/: latest_build
src/cctv_perception/: setup.cfg  setup.py
src/cctv_perception/cctv_perception/: calibrate.py
src/map/: cctv_fusion_node.py
src/parking_robot/: README.md  package.xml  setup.cfg  setup.py
src/parking_robot/config/: nav2_params.yaml
src/parking_robot/launch/: system_launch.py
src/parking_robot/parking_robot/: aruco_tracker_node.py  fleet_manager_node.py  rigid_body_sync_node.py  robot_state_machine_node.py  ultrasonic_edge_node.py  yolo_bev_map_node.py
src/parking_sim/: setup.cfg  setup.py
src/parking_sim/parking_sim/: nav_controller.py  sim_aruco_sync.py  sim_cctv.py
stm32_firmware/: parking_robot_firmware.c
