<?xml version="1.0"?>
<package format="3">
  <name>parking_robot</name>
  <version>1.0.0</version>
  <description>협동 자율 주차 로봇 시스템 (WBS 기반)</description>
  <maintainer email="team@example.com">SW Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
